# ReportesAlarmasServer

./: .coverage  .gitignore  README.md  coverage.xml  pyproject.toml
.github/workflows/: lint.yml  main.yml  tests.yml
alembic/: env.py
alembic/versions/: 0c62f93c9d9f_create_initial_tables.py  0ef3d1e0498a_created_areastageproductconig_model.py  1b61bd2e46d6_created_user_model.py  24564a4446e1_updated_user_model.py  29542d160209_added_stage_join_field_to_order_model.py  3767ad1c5ebd_created_area_model.py  42566d84574b_updated_and_added_fields_to_order_model.py  4419bc2d77f5_updated_user_model_with_new_field_area.py  480feb8a5fd6_created_orderreport_model.py  491e2601cdab_added_password_field_to_user_model.py  501cdd44dde8_added_new_field_for_task_model.py  501e71e02ed9_added_new_relationships_to_order.py  52bd5481b8e2_created_base_business_models.py  53cf0989c0c0_created_task_model.py  5e0e4c770601_update_area_removed_fields_add_field_.py  6bbcad792efe_added_join_for_history_tracks_in_order_.py  7e5617367818_removed_not_used_validation_helper_in_.py  94d0fb83b625_.py  a38a6d75dc8a_altered_status_field_in_.py  aa25566bc1b3_updated_business_models.py  ab1fbd97960a_create_initial_tables.py  c714d9ed3e73_added_enum_of_order_stages_for_stage_.py  e2cb63b8432d_created_orderhistorytrack_model.py  e4371a50941c_altered_model_user_with_new_area_name_.py  edd7c2492b57_updated_user_model.py  f40a092fc43f_probando_migraciones.py  f421c66fd372_create_tables.py  f6c36257d228_automated_migrations_test.py  f71ff6f12a13_new_field_category_in_areas_table.py
app/: database.py  main.py  run.py
app/decorators/: common.py
app/dtos/: business.py
app/enums/: authentication.py  business.py  products.py
app/models/: authentication.py  base.py  business.py  products.py  reports.py
app/pipelines/: areas.py  stages.py
app/routes/: business.py  (+3 more)
tests/: conftest.py  test_main.py
(+8 files in other folders)
