[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "MarcoA-Pozol",email = "marcoantoniopozolnarciso@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "sqlalchemy (>=2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "colorlog (>=6.10.1,<7.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]
package-mode = false

[tool.poetry.scripts]
dev = "app.run:main"
makemigrations = "app.run:makemigrations"
migrate = "app.run:migrate"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.1.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
